{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 73,
  "lineage": "33f3dc0a-2a2c-01ef-8415-ab1c77ff15e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d13e4c94a6aaed50",
            "arn": "arn:aws:ec2:us-west-1:203918887492:elastic-ip/eipalloc-0d13e4c94a6aaed50",
            "association_id": "eipassoc-022b6e2b2d26bd953",
            "domain": "vpc",
            "id": "eipalloc-0d13e4c94a6aaed50",
            "network_border_group": "us-west-1",
            "network_interface": "eni-00772be614ffa4336",
            "private_dns": "ip-10-20-1-80.us-west-1.compute.internal",
            "private_ip": "10.20.1.80",
            "public_dns": "ec2-184-169-226-165.us-west-1.compute.amazonaws.com",
            "public_ip": "184.169.226.165",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:internet-gateway/igw-0e9f062c8ca10bad8",
            "id": "igw-0e9f062c8ca10bad8",
            "owner_id": "203918887492",
            "tags": {
              "Name": "streamsphere-igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-igw",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:loadbalancer/app/streamsphere-alb/dd6d933acb5e7d48",
            "arn_suffix": "app/streamsphere-alb/dd6d933acb5e7d48",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "streamsphere-alb-1879663737.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:203918887492:loadbalancer/app/streamsphere-alb/dd6d933acb5e7d48",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "streamsphere-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03c979ebc5d6fdc21"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02637f25c0c93fff4"
              },
              {
                "subnet_id": "subnet-099fd4573fd1d16c4"
              }
            ],
            "subnets": [
              "subnet-02637f25c0c93fff4",
              "subnet-099fd4573fd1d16c4"
            ],
            "tags": {
              "Project": "streamsphere"
            },
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "streamsphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:listener/app/streamsphere-alb/dd6d933acb5e7d48/50b6482a5c0a8dd7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:targetgroup/streamsphere-tg/40ebc311c9d40dd4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:203918887492:listener/app/streamsphere-alb/dd6d933acb5e7d48/50b6482a5c0a8dd7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:loadbalancer/app/streamsphere-alb/dd6d933acb5e7d48",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.api",
            "aws_lb_target_group.api_tg",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:targetgroup/streamsphere-tg/40ebc311c9d40dd4",
            "arn_suffix": "targetgroup/streamsphere-tg/40ebc311c9d40dd4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:203918887492:targetgroup/streamsphere-tg/40ebc311c9d40dd4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-1:203918887492:loadbalancer/app/streamsphere-alb/dd6d933acb5e7d48"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "streamsphere-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:203918887492:targetgroup/streamsphere-api-tg-v2/376c0c967a34099f",
            "arn_suffix": "targetgroup/streamsphere-api-tg-v2/376c0c967a34099f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:203918887492:targetgroup/streamsphere-api-tg-v2/376c0c967a34099f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "streamsphere-api-tg-v2",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d13e4c94a6aaed50",
            "association_id": "eipassoc-022b6e2b2d26bd953",
            "connectivity_type": "public",
            "id": "nat-0337b6e864dd18461",
            "network_interface_id": "eni-00772be614ffa4336",
            "private_ip": "10.20.1.80",
            "public_ip": "184.169.226.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-099fd4573fd1d16c4",
            "tags": {
              "Name": "streamsphere-nat"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-nat",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:route-table/rtb-0c0cb33d53908f942",
            "id": "rtb-0c0cb33d53908f942",
            "owner_id": "203918887492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0337b6e864dd18461",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streamsphere-private-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-private-rt",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:route-table/rtb-021b8ee745ff9b91f",
            "id": "rtb-021b8ee745ff9b91f",
            "owner_id": "203918887492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9f062c8ca10bad8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "streamsphere-public-rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-public-rt",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bfad8ad57650dcd",
            "route_table_id": "rtb-0c0cb33d53908f942",
            "subnet_id": "subnet-0e72359f16214c829"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_a",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a529a1075a6461",
            "route_table_id": "rtb-0c0cb33d53908f942",
            "subnet_id": "subnet-0cb2ea6cbb0267712"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_b",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010bf5d86992af9e1",
            "route_table_id": "rtb-021b8ee745ff9b91f",
            "subnet_id": "subnet-099fd4573fd1d16c4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d1ede18ec92f125",
            "route_table_id": "rtb-021b8ee745ff9b91f",
            "subnet_id": "subnet-02637f25c0c93fff4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:security-group/sg-03c979ebc5d6fdc21",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c979ebc5d6fdc21",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "streamsphere-alb-sg",
            "name_prefix": "",
            "owner_id": "203918887492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "streamsphere-alb-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-alb-sg",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:security-group/sg-0971111fbe8307109",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0971111fbe8307109",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "streamsphere-db-sg",
            "name_prefix": "",
            "owner_id": "203918887492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "streamsphere-db-sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-db-sg",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:security-group/sg-01ca5d1d26c96cd1c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ca5d1d26c96cd1c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03c979ebc5d6fdc21"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "streamsphere-ecs-sg",
            "name_prefix": "",
            "owner_id": "203918887492",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "Dev",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:subnet/subnet-0e72359f16214c829",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e72359f16214c829",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918887492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamsphere-private-a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-private-a",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:subnet/subnet-0cb2ea6cbb0267712",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb2ea6cbb0267712",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "203918887492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamsphere-private-b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-private-b",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:subnet/subnet-099fd4573fd1d16c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099fd4573fd1d16c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918887492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamsphere-public-a"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-public-a",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:subnet/subnet-02637f25c0c93fff4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02637f25c0c93fff4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "203918887492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "streamsphere-public-b"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-public-b",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            },
            "vpc_id": "vpc-0de529f1c149a576d"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:203918887492:vpc/vpc-0de529f1c149a576d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-019c2858021a01ad6",
            "default_route_table_id": "rtb-0d8e7c8f3723f5829",
            "default_security_group_id": "sg-0b67ac5ae6549dfc0",
            "dhcp_options_id": "dopt-0cbb4dc61353b2e28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de529f1c149a576d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d8e7c8f3723f5829",
            "owner_id": "203918887492",
            "tags": {
              "Name": "streamsphere-vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "streamsphere-vpc",
              "Owner": "Tamizh Selvan",
              "Project": "StreamSphere"
            }
          }
        }
      ]
    }
  ]
}